Lectura de scripts línea por línea y delegación al Interprete