@@ -1,11 +1,11 @@
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 
 public class FileHelper {
-    public static String readFile(String filePath) throws IOException {
-        Path path = Paths.get(filePath);
-        return Files.readString(path);
+
+    public static List<String> readFile(String filePath) throws IOException {
+        return Files.readAllLines(Path.of(filePath));
     }
 }
